# mcp-sse-rust

./: Cargo.toml  README.md
src/: main.rs
